prepare for docker

--- a/app/defaultConfig.conf
+++ b/app/defaultConfig.conf
@@ -1,11 +1,9 @@
 [General]
 
 # location of log files (required)
-LogLocation = /var/log/
+LogLocation = /home/pi/garage-pi/data/
 
-
-# (Optional) This parameter specifes the GPIO connector where the 433.42 MHz
-# emitter is connected to. The default value is 4
+# Specify GPIO pins which are used to control up- and down relais and which pins are read for moving motor and garage door closed status
 UPGPIO = 18
 DOWNGPIO = 4
 MOVINGGPIO = 17
